Set up dynamic recipe elements - Set up general structure of recipe card information - Set up recipe browsing page and sections

--- a/styles/components/navigation-bar.css
+++ b/styles/components/navigation-bar.css
@@ -4,6 +4,7 @@
     width: 100vw;
     background-color: var(--primary-yellow);
     position: fixed;
+    top: 0px;
     display: flex;
     flex-direction: row;
     align-items: center;
