Imported recipe images - displayed on HTML elements - more CSS design on recipe element

--- a/includes/recipe/recipe-card.html
+++ b/includes/recipe/recipe-card.html
@@ -2,7 +2,10 @@
 <template id="recipe-card-template">
     <div class="recipe-card">
         <img class="recipe-image" src="" alt="Recipe Image">
-        <h2 class="recipe-name"></h2>
-        <div class="recipe-tags"></div>
+        <div class="recipe-info">
+            <h2 class="recipe-name"></h2>
+            <div class="recipe-tags"></div>
+        </div>
+        
     </div>
 </template>
