Added order functionality - Added order customisation options - implemented dynamic dish selection page - Created dynamic dish display - Implemented local storage to hold information - imported more recipe images

--- a/includes/navigation-bar.html
+++ b/includes/navigation-bar.html
@@ -16,7 +16,7 @@
             <a class="navbar-link" id="recipeLink" href="/pages/recipes/browse-recipe-page.html">Recipes</a>
             <a class="navbar-link" id="aboutUsLink" href="/pages/about-us-page.html">About Us</a>
             <div class="navbar-btns">
-                <a class="shopping-basket-btn">
+                <a class="shopping-basket-btn" href="/pages/shopping-cart/shopping-cart-page.html">
                     <div class="shopping-basket-icon"></div>
                 </a>
                 <a class="order-now-btn" href="/pages/order/order-page.html">Order now</a>
