--- a/includes/recipe/recipe-card.html
+++ b/includes/recipe/recipe-card.html
@@ -1,11 +1,13 @@
-<!-- recipe-template.html -->
+
 <template id="recipe-card-template">
-    <div class="recipe-card">
-        <img class="recipe-image" src="" alt="Recipe Image">
-        <div class="recipe-info">
-            <h2 class="recipe-name"></h2>
-            <div class="recipe-tags"></div>
+    <a href="" class="recipe-link">
+        <div class="recipe-card">
+            <img class="recipe-image" id="recipe-image" src="" alt="Recipe Image">
+            <div class="recipe-info">
+                <h2 class="recipe-name"></h2>
+                <div class="recipe-tags"></div>
+            </div>
+            
         </div>
-        
-    </div>
+    </a>
 </template>
