--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -1,70 +1,167 @@
-
-/*Page set up and layout*/
-.checkout-container{
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left:0;
+body{
+    background-image: none;
+}
+.container {
     display: flex;
-    justify-content: row;
-    background-color: #FFFBF2;
+    flex-direction: column;
+    overflow-x: hidden;
 }
 
-
-/*Exit checkout button*/
-.back-btn {
-    height: 50px;
-    width: 100px;
+/*Back & Prev button*/
+.back-btn{
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 20px;
-    background: none;
+    gap: 10px;
+    background-color: transparent;
     text-decoration: none;
 }
-
-.back-icon-border {
-    width: 30px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid #796851;
-    border-radius: 20px;
-}
-
-.back-btn-text {
+/*Back button text*/
+.back-btn p{
     font-family: 'Lorenzo-Sans';
     font-size: 20px;
     color: #796851;
-    padding-bottom: 3px;
 }
 
+/*Mobile variatns*/
+.back-btn.mobile{
+    display: none;
+}
+/*Dekstop variant*/
+.back-btn.desktop{
+    position: fixed;
+    left: 2vw;
+}
+/*Next button*/
+.next-btn{
+    height: 45px;
+    width: 140px;
+    border-radius: 50px;
+    justify-content: center;
+    align-items: center;
+    background-color: #34929C;
+    color: white;
+    font-family: 'Lorenzo-Sans';
+    font-size: 15px;
+}
+.next-btn.mobile{
+    /*Invisible on desktop*/
+    display: none;
+}
 
-/*Left container*/
-.left-container{
-    width: 65vw;
+/*Base styles for page sections*/
+.summary{
+    height: 100vh;
+    background-color: red;
+    padding: 2%;
+}
+
+.payment{
+    background-color: green;
+}
+
+.order-summary{
     height: 100%;
-    padding: 1% 0 1% 1.5%;
+    width: 100%;
+    padding: 5% 10% 0 10%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    background-color: #FFEDC0;
+    border-radius: 18px;
+}
+
+.summary-title-bar{
+    width: 100%;
+    display: flex;
     justify-content: space-between;
 }
 
-.input-fields-container{
+.shipping-info{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 3%;
+}
+.shipping-info h3{
+    color: #403021;
+    font-family: 'Lorenzo-Sans';
+    font-size: 24px;
+}
+
+.meal-box{
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
 
-/*Right container*/
-.right-container{
-    width: 50vw;
-    height: 100vh;
-    padding: 2%;
+.meal-box p{
+    font-size: 13px;
 }
+
+.meal-box-container{
+    width: 100%;
+    height: 80%
+}
+
+
+.meal-box-ridge{
+    margin-top: 20px;
+    height: 7%;
+    width: 40%;
+    position: relative;
+    background-color: #FFFBF2;
+    border: 4px solid #796851;
+    border-radius: 18px 30px 0 0;
+    
+}
+.meal-box-bg{
+    width: 100%;
+    height: 80%;
+    background-color: #FFFBF2;
+    border: 4px solid #796851;
+    border-radius: 30px;
+    position: relative;
+    top: -2.5%;
+}
+
+.meal-box-title{
+    width: 40%;
+    height: 20%;
+    color: #796851;
+    font-family: 'Lorenzo-Sans';
+    font-size: 20px;
+    background-color: #FFFBF2;
+    text-align: center;
+    position: relative;
+    top: -83%;
+    margin-left: 4px;
+    border-radius: 20px;
+}
+
+.price-container{
+    height: 8%;
+    width: 30%;
+    background-color: #FFFBF2;
+    border: 4px solid #796851;
+    border-radius: 100px;
+    position: relative;
+    top: -106%;
+    left: 63%;
+}
+
+.next-btn.desktop.confirm{
+    position: relative;
+    top: -34%;
+    left: 35%;
+}
+
+/*Delivery detaill section*/
+.delivery{
+    background-color: blue;
+    padding: 90px 2% 0 2%;
+}
+
 
 .summary-container{
     width: 100%;
@@ -95,11 +192,6 @@ input[type="text"] {
     font-size: 15px;
 }
 
-/*Each individual field*/
-#firstName{
-    
-}
-
 /*Input form*/
 .input-form{
     height: 100%;
@@ -118,9 +210,6 @@ input[type="text"] {
     padding: 10px;
 }
 
-
-
-
 /*Address container*/
 .address-field{
     display: flex;
@@ -137,111 +226,114 @@ input[type="text"] {
     width: calc(50% - 5px);
 }
 
-/*Payment method section*/
-
-.payment-method-container{
-    width: 100%;
-    height: 100%;
+.form-container {
     display: flex;
-    flex-direction: column;
+    width: 300%;
+    transition: transform 0.5s ease-in-out;
 }
-
-.payment-method-fields{
+.form-section {
     width: 100%;
-    height: 100%;
-    background-color: #FFEDC0;
-    border-radius: 20px;
+    flex-shrink: 0;
+    box-sizing: border-box;
+    padding: 20px;
 }
 
-.mobile-nav{
-    position: absolute;
-    z-index: 3;
-    display: none; /*Only visible on mobile screen*/
-}
-
-.mobile-nav p{
-    color: red;
-    font-size: 30px;
-    
+.input-fields-container, .payment-method-container, .summary-container {
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 
-/*Handles changes in screen size*/
-@media (max-width: 1200px) {
-    .personal-information-fields, .delivery-details-fields {
-        flex: 1 1 100%;
-    }
-    /*ADDRESS INFORMATION*/
-    .address-field{
-        justify-content: flex-start;
-    }
-    /*Address text input*/
-    .address-input{
-        width: 80%;
-    }
-    /*Post code and town*/
-    .postcode-input, .town-input{
-        width: calc(40% - 5px);
-    }
-
-    .checkout-title{
-        font-size: 40px;
+@media (min-width: 1300px){
+    /*Changes in position & size on Dektop*/
+    .summary{
+        width: 35%;
         position: absolute;
-        padding-left: 5vw;
+        right:0;
     }
-
-    /*Handles pages*/
-    .right-container{
-        width: 100vw;
-        height: 80vh;
-        padding: 5vw 5vw 0 5vw;
-        position: absolute;
-        bottom: 0;
+    .delivery{
+        width: 65vw;
+        height: 40vh;
     }
-
-    /*Navigation*/
-    .mobile-nav{
-        display: block;
+    .payment{
+        width: 65vw;
+        height: 60vh;
     }
-
-
-
-    .checkout-container {
-        display: flex;
-        overflow: hidden;
-        width: 100%;
-        position: relative;
-    }
-    .form-container {
-        display: flex;
-        width: 300%;
-        transition: transform 0.5s ease-in-out;
-    }
-    .form-section {
-        width: 100%;
-        flex-shrink: 0;
-        box-sizing: border-box;
-        padding: 20px;
-    }
-    .back-btn-container {
-        margin-bottom: 20px;
-    }
-    .input-fields-container, .payment-method-container, .summary-container {
-        padding: 20px;
-        box-sizing: border-box;
-    }
-    .back-btn {
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-    }
-    .back-btn img {
-        margin-right: 5px;
-    }
-    .hidden {
+    .summary h1, .payment h1{
         display: none;
     }
+    /*Text sizes*/
+    .title{
+        font-size: 60px;
+    }
+    .title.sub{
+        font-size: 50px;
+        color: #403021;
+    }
+    /*Buttons*/
+    .next-btn.confirm{
+        position: absolute;
+        right: 13.5%;
+        bottom: calc(11vh + 2vw);
+    }
 }
 
 
 
+
+/*Mobile phone*/
+@media (max-width: 1299px) {
+    /*Handles hte page slideshow*/
+    .container {
+        flex-direction: row;
+    }
+    .page {
+        display: none;
+        transition: transform 0.5s ease-in-out;
+        padding: 5%;
+    }
+    
+    .page.active {
+        display: block;
+        transform: translateX(0);
+    }
+    /*text*/
+    .title{
+        font-size: 40px;
+        margin:  10% 0 10% 4%;
+    }
+
+    /*Mobile buttons*/
+    .back-btn.mobile{
+        display: flex;
+    }
+    .next-btn.mobile{
+        display: flex;
+        position: fixed;
+        bottom: 5vh;
+        left: calc(100vw/2 - 16%);
+    }
+    /*Dekstop buttons inactive*/
+    .back-btn.desktop{
+        position: relative;
+    }
+    .next-btn.desktop.confirm{
+        display: none;
+    }
+
+    /*SCREENS/PAGES*/
+    .summary{
+        width: 100vw;
+        position: relative;
+    }
+    .delivery{
+        width: 100vw;
+        height: 100vh;
+        position: relative;
+    }
+    .payment{
+        width: 100vw;
+        height: 100vh;
+        position: relative;
+    }
+}
