--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -55,10 +55,6 @@ body{
     padding: 2%;
 }
 
-.payment{
-    background-color: green;
-}
-
 .order-summary{
     height: 100%;
     width: 100%;
@@ -241,6 +237,177 @@ input[type="text"] {
 .input-fields-container, .payment-method-container, .summary-container {
     padding: 20px;
     box-sizing: border-box;
+}
+
+/*Payment method section*/
+.payment{
+    background-color: green;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.payment-information{
+    height: 100%;
+    width: 100%;
+    padding: 3%;
+}
+
+.payment-container{
+    height: 92%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color:#FFEDC0; 
+    border-radius: 19px;
+    padding: 4%;
+}
+
+/*Payment container & slider*/
+.payment-method-container {
+    width: 100%;
+    height: 80%;
+    background-color: red;
+    position: relative;
+    overflow: hidden;
+}
+
+.payment-method {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: left 0.5s ease;
+}
+
+
+.payment-method-slider {
+    width: 100%;
+    height: 13%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
+}
+
+.payment-method-slider label {
+    height: 100%;
+    width: 250%;
+    position: relative;
+    overflow: hidden;
+    background-color: #FFFBF2;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Lorenzo-Sans';
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.slider-bg{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #FFFBF2;
+    border-radius: 100px;
+}
+
+/*Show active state of button*/
+.payment-method-slider label.active {
+    background-color: #FFD058; 
+}
+
+/* Hide the radio buttons */
+.payment-method-slider input[type="radio"] {
+    position: absolute;
+    opacity: 0; 
+}
+
+
+
+.payment-form{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    overflow: visible;
+}
+
+.card-input-field{
+    height: 100%;
+    width: 60%;
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    z-index: 2;
+}
+
+/*Child text inputes*/
+.card-input-field div{
+    width: calc(100% - 100px);
+    display: flex;
+    gap: 20px;
+}
+.card-input-field div input{
+    width: calc(100%/2 - 20px);
+}
+
+/*Payment input*/
+.payment-input{
+    border:none !important;/*overwrite text input styles*/
+}
+
+/*Individual styles of text fields*/
+.payment-input.cardholder-name {
+    width: 80%;
+}
+
+.credit-card{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card-img{
+    height: 100%;
+    position: relative;
+    right: 100px;
+}
+
+.input-display{
+    width: 0;
+    position: relative;
+    right: 115%;
+    top: 26%;
+}
+.input-display p{
+    color: white;
+    font-family: 'Lorenzo-Sans';
+}
+
+.input-display div{
+    display: flex;
+}
+/*input weight & size*/
+.input-display.bold{
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.input-display.light{
+    font-weight: regular;
+    font-size: 18px;
+}
+
+/*Individual input position*/
+.input-display.cardholder-name{
+    position: relative;
+    
 }
 
 
