--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -1,5 +1,9 @@
+
 body{
     background-image: none;
+    height: 100vh;
+    overflow-y: hidden;
+    background-color: #FFFBF2;
 }
 .container {
     display: flex;
@@ -51,7 +55,6 @@ body{
 /*Base styles for page sections*/
 .summary{
     height: 100vh;
-    background-color: red;
     padding: 2%;
 }
 
@@ -64,6 +67,11 @@ body{
     align-items: center;
     background-color: #FFEDC0;
     border-radius: 18px;
+}
+
+.terms-condition{
+    margin-top: -10px;
+    font-size: 11px !important;
 }
 
 .summary-title-bar{
@@ -122,42 +130,80 @@ body{
 }
 
 .meal-box-title{
-    width: 40%;
-    height: 20%;
+    width: 37.5%;
+    padding: 10px 0px 10px 0 ;
     color: #796851;
     font-family: 'Lorenzo-Sans';
     font-size: 20px;
     background-color: #FFFBF2;
     text-align: center;
     position: relative;
-    top: -83%;
+    top: -86%;
     margin-left: 4px;
-    border-radius: 20px;
+    border-radius: 40px 40px 40px 0;
 }
 
 .price-container{
     height: 8%;
     width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #FFFBF2;
     border: 4px solid #796851;
     border-radius: 100px;
     position: relative;
-    top: -106%;
+    top: -97%;
     left: 63%;
 }
 
+.price-container p{
+    font-family: 'Lorenzo-Sans';
+    font-size: 100%;
+    font-weight: bold;
+    color: #403021;
+}
+
+
+
 .next-btn.desktop.confirm{
     position: relative;
-    top: -34%;
+    top: -26%;
     left: 35%;
+}
+
+/*Recipe items */
+.summary-item-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10% 2% 2% 2%;
+    z-index: 10;
+}
+.recipe-item{
+    width: 100%;
+    height: 15%;
+    overflow: hidden;
+    display: flex;
+    background-color: #FFEDC0;
+    border-radius: 9px;
+}
+
+.recipe-item img{
+    width: 20%;
+}
+.recipe-item p{
+    font-family: 'Lora';
+    font-size: 80%;
+    padding: 2% 0 0 3%;
 }
 
 /*Delivery detaill section*/
 .delivery{
-    background-color: blue;
     padding: 90px 2% 0 2%;
 }
-
 
 .summary-container{
     width: 100%;
@@ -186,6 +232,7 @@ input[type="text"] {
     font-family: 'Lorenzo-Sans';
     font-weight: medium;
     font-size: 15px;
+    background-color: #FFFBF2;
 }
 
 /*Input form*/
@@ -205,6 +252,58 @@ input[type="text"] {
     box-sizing: border-box;
     padding: 10px;
 }
+
+.contact-field input[type="radio"] {
+    display: none;
+}
+
+.contact-field {
+    width: 100%;
+    display: flex;
+}
+.contact-container{
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.contact-container label{
+    position: relative;
+    right: 87%;
+}
+
+
+
+.checkbox {
+    display: flex;
+    cursor: pointer;   
+}
+
+.custom-radio {
+    width: 22px;
+    height: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    color: #403021;
+    border: 2px solid #796851;
+    background-color: #FFFBF2;
+}
+
+.checkbox input[type="radio"]:checked + .custom-radio::after {
+    content: '✖'; 
+    font-size: 18px;
+}
+/*Unselected*/
+.custom-radio::after {
+    content: '';
+    display: none;
+}
+
+.checkbox input[type="radio"]:checked + .custom-radio::after {
+    display: block;
+}
+
 
 /*Address container*/
 .address-field{
@@ -241,7 +340,6 @@ input[type="text"] {
 
 /*Payment method section*/
 .payment{
-    background-color: green;
     display: flex;
     flex-direction: column;
 
@@ -250,7 +348,7 @@ input[type="text"] {
 .payment-information{
     height: 100%;
     width: 100%;
-    padding: 3%;
+    padding: 1% 3% 3% 3%;
 }
 
 .payment-container{
@@ -261,14 +359,14 @@ input[type="text"] {
     justify-content: space-between;
     background-color:#FFEDC0; 
     border-radius: 19px;
-    padding: 4%;
+    padding: 15px;
+    gap: 20px;
 }
 
 /*Payment container & slider*/
 .payment-method-container {
     width: 100%;
-    height: 80%;
-    background-color: red;
+    height: 90%;
     position: relative;
     overflow: hidden;
 }
@@ -285,7 +383,7 @@ input[type="text"] {
 
 .payment-method-slider {
     width: 100%;
-    height: 13%;
+    height: 50px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -329,7 +427,6 @@ input[type="text"] {
 }
 
 
-
 .payment-form{
     height: 100%;
     width: 100%;
@@ -364,7 +461,7 @@ input[type="text"] {
 
 /*Individual styles of text fields*/
 .payment-input.cardholder-name {
-    width: 80%;
+    width: calc(100% - 120px);
 }
 
 .credit-card{
@@ -374,16 +471,17 @@ input[type="text"] {
     justify-content: center;
 }
 .card-img{
-    height: 100%;
+    height: 230px;
     position: relative;
-    right: 100px;
+    right: 90px;
 }
 
 .input-display{
     width: 0;
+    height: 100px;
     position: relative;
-    right: 115%;
-    top: 26%;
+    right: 225px;
+    top: 40px;
 }
 .input-display p{
     color: white;
@@ -405,11 +503,36 @@ input[type="text"] {
 }
 
 /*Individual input position*/
-.input-display.cardholder-name{
-    position: relative;
-    
+.input-display.card-number{
+    width: 250px;
 }
 
+.input-display div{
+    position: relative;
+    top: -60px;
+}
+
+.input-display.cardholder-name{
+    width: 0;
+    display: inline-block;
+    white-space: nowrap;
+    position: relative;
+    top: 33px;
+}
+
+.input-display.expiry {
+    width: 100px;
+    position: relative; 
+    right: 80px;
+    top: 33px;
+}
+
+/*Apple pay*/
+.payment-method.other{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 @media (min-width: 1300px){
     /*Changes in position & size on Dektop*/
@@ -420,11 +543,11 @@ input[type="text"] {
     }
     .delivery{
         width: 65vw;
-        height: 40vh;
+        height: 45vh;
     }
     .payment{
         width: 65vw;
-        height: 60vh;
+        height: 55vh;
     }
     .summary h1, .payment h1{
         display: none;
@@ -442,6 +565,15 @@ input[type="text"] {
         position: absolute;
         right: 13.5%;
         bottom: calc(11vh + 2vw);
+    }
+
+    .contact-container input{
+        width: 14.6vw;
+        padding-left: 40px;
+    }
+    .contact-container.email{
+        position: relative; 
+        right: 20px;
     }
 }
 
@@ -477,8 +609,11 @@ input[type="text"] {
     .next-btn.mobile{
         display: flex;
         position: fixed;
-        bottom: 5vh;
+        bottom: 6vh;
         left: calc(100vw/2 - 16%);
+    }
+    .next-btn.summary-page{
+        bottom: 16vh;
     }
     /*Dekstop buttons inactive*/
     .back-btn.desktop{
@@ -493,14 +628,158 @@ input[type="text"] {
         width: 100vw;
         position: relative;
     }
+    .order-summary{
+        height: 80%;
+        padding: 4%;
+    }
+    .meal-box-container{
+        height: 110%;
+    }
+    .title.sub{
+        color: #403021;
+        margin: 20px 0 0 10px;
+    }
     .delivery{
         width: 100vw;
         height: 100vh;
         position: relative;
     }
+    .personal-information-fields{
+        display: flex;
+        flex-direction: column;
+    }
+    .name-field{
+        display: flex;
+        gap: 10px;
+    }
+    .top-container{
+        display: flex;
+        flex-direction: column;
+    }
+    /*Adjust size of first and last name text boxes*/
+    #firstName{
+        width: 50%;
+    }
+    #lastName{
+        width: 40%;
+    }
+    .contact-container{
+        width: 100%;
+    }
+    .contact-container label{
+        position: relative;
+        right: 90%;
+    }
+    .contact-field{
+        flex-direction: column;
+    }
+    .payment-container{
+        height: 70%;
+    }
+
     .payment{
         width: 100vw;
         height: 100vh;
         position: relative;
+    }
+    .payment-information{
+        padding:0px;
+    }
+    
+    .payment-method-slider{
+        height: 40px;
+    }
+
+    .payment-method-slider label{
+        font-size: 50%;
+    }
+
+    .payment-form{
+        flex-direction: column;
+    }
+    .card-input-field{
+        width: 100%;
+        height: 100%;
+    }
+    .card-img{
+        height: 200px;
+        left:0;
+    }
+    .input-display{
+        right: 160px;
+        top: 35px;
+    }
+    .input-display.expiry{
+        right: -30px;
+    }
+
+    .contact-container input{
+        margin-bottom: 10px;
+    }
+    
+}
+
+/*Styles for the (un)successful page*/
+.center{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content-container{
+    height: 45vh;
+    width: 40vw; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.content-container img{
+    width: 20%;
+}
+
+.content-container h1{
+    font-family: 'Lora';
+    font-size: 60px;
+    text-align: center;
+}
+
+.content-container p{
+    font-size: 20px;
+    font-weight: medium;
+    text-align: center;
+}
+
+.content-container a{
+    height: 80px;
+    width: 270px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    background-color: transparent;
+    border: 4px solid #007C89;
+    font-size: 25px;
+    font-family: 'Lorenzo-Sans';
+    font-weight: medium;
+    color: #007C89;
+    text-decoration: none;
+}
+
+@media (max-width: 600px) {
+    .content-container{
+        height: 60vh;
+        width: 80vw; 
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .content-container p{
+        font-size: 20px;
+        font-weight: medium;
+        text-align: center;
     }
 }
