Set up about-us page - imported illustration and images for about us page - added parallax effect on about us page elements - fixed ordering page mobile responsivity - made home page mobile responsive - made footer mobile responsive - made recipe page mobile responive

--- a/includes/navigation-bar.html
+++ b/includes/navigation-bar.html
@@ -12,7 +12,12 @@
     
     <div class="navbar-content">
         <a href="/index.html"><img class="logo" src="/Assets/Logo.png"/></a>
-        <div class="navbar-links">
+        <!-- Hamburger menu button -->
+        <div class="hamburger-menu" id="hamburgerMenu" onclick="toggleMenu()">
+            <img src="/Assets/icons/hamburger.svg">
+        </div>
+        <!--Nav bar links-->
+        <div class="navbar-links" id="navbarLinks">
             <a class="navbar-link" id="recipeLink" href="/pages/recipes/browse-recipe-page.html">Recipes</a>
             <a class="navbar-link" id="aboutUsLink" href="/pages/about-us-page.html">About Us</a>
             <div class="navbar-btns">
