--- a/styles/components/navigation-bar.css
+++ b/styles/components/navigation-bar.css
@@ -104,4 +104,64 @@ a:hover {
 }
 
 
+/*Hamburger menu bar*/
+
+/* Hamburger menu styles */
+
+.hamburger-menu {
+    display: none;
+}
+
+/* Media query for small screens */
+@media screen and (max-width: 768px) {
+    
+    .navbar-container.nav-open{
+        background-color:  #F8F0DC;
+    }
+    
+    .hamburger-menu {
+        display: block;
+    }
+    .navbar-content{
+        width: 100%;
+        padding-right: 5%;
+    }
+
+    .navbar-links {
+        display: none; 
+        flex-direction: column;
+        align-items: flex-start;
+        background-color: #F8F0DC;
+        position: absolute;
+        top: 100%; /* Position below the header */
+        height: 300px;
+        gap: 10px;
+        left: 0;
+        width: 100%;
+        padding: 30px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+    .navbar-links a{
+        font-size: 25px;
+    }
+
+    .shopping-basket-btn{
+        display: none;
+    }
+    .order-now-btn{
+        width: 150px;
+        color: var(--text-black);
+        text-align: left;
+        background-color: transparent;
+    }
+    
+
+    .navbar-links.show {
+        display: flex; /* Show when menu is toggled */
+    }
+    .navbar-links.show {
+        display: flex; /* Show when menu is toggled */
+    }
+}
+
 
