--- a/includes/recipe/recipe-card.html
+++ b/includes/recipe/recipe-card.html
@@ -1,6 +1,6 @@
 
 <template id="recipe-card-template">
-    <a href="" class="recipe-link">
+    <button class="recipe-link" id="recipeCard" onclick="linkOpen(event)">
         <div class="recipe-card">
             <img class="recipe-image" id="recipe-image" src="" alt="Recipe Image">
             <div class="recipe-info">
@@ -9,5 +9,5 @@
             </div>
             
         </div>
-    </a>
+    </button>
 </template>
