--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -71,7 +71,8 @@
 
 .text-content.s3{
     display: flex;
-    gap: 50%;
+    gap: 350px;
+
 }
 
 .text-2{
@@ -116,6 +117,12 @@
     left:-40vw; 
 }
 
+.tomato{
+    top: 100vh;
+    left: 50vw;
+    width: 30vw;
+}
+
 /*Mobile screen*/
 @media  screen and (max-width: 600px) {
     .parallax-container img{
@@ -129,6 +136,7 @@
 
     .text-content.s1{
         width: 70%;
+        height: 30%;
         padding: 0;
         margin-bottom: 50%;
     }
@@ -162,10 +170,32 @@
         padding: 0;
     }
     .title.desktop{
-        display: none;
+        margin-bottom: 50vh;
     }
     .illustration.s3{
         display: none;
+    }
+
+    /*Parallax*/
+    .states{
+        width: 110vw !important;
+        top: 160vh;
+        left: -5vw; 
+    }
+
+    .taco-plate{
+        top: 130vh;
+        left: -45vw;
+    }
+
+    .noodle-bowl{
+        top: 50vh;
+    }
+
+    .tomato{
+        top: 100vh;
+        left: 40vw;
+        width: 80vw !important;
     }
     /*Text sizes*/
 
@@ -177,10 +207,11 @@
         font-size: 12px;    
     }
 
+
     .text-content{
         width: 40%;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 10px;
     }
 }
