--- a/styles/components/navigation-bar.css
+++ b/styles/components/navigation-bar.css
@@ -51,6 +51,7 @@ a {
     justify-content: center;
     border: 2.5px solid var(--accent-primary);
     border-radius: 30px;
+    background-color: transparent ;
     transition: transform 0.3s ease;
 }
 .shopping-basket-icon {
@@ -78,7 +79,7 @@ a {
 
 /*On hover*/
 
-a:hover {
+button:hover {
     color: var(--accent-primary);
 }
 
@@ -103,14 +104,128 @@ a:hover {
     transform: translateY(-5px);
 }
 
+.navbar-btns button:hover{
+    color: var(--accent-secondary);
+    transform: translateY(-5px);
+}
 
-/*Hamburger menu bar*/
+
 
 /* Hamburger menu styles */
 
 .hamburger-menu {
     display: none;
 }
+
+
+/*Shopping cart*/
+
+
+/* styles.css */
+
+.cart-title{
+    color: #403021;
+}
+
+.overlay {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 100vw;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    justify-content: right;
+    transition: transform 0.5s ease-out;
+    transform: translateX(100%);
+    
+}
+
+/*When cart open*/
+.overlay.open{
+    display: flex;
+    left: 0;
+    transition: transform 0.5s ease-out;
+    transform: translateX(0vw);
+}
+
+
+
+.cart {
+    height: 100%;
+    width: 40vw;
+    position: relative;
+    background: #FFFBF2;
+    padding: 3%;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 3%;
+}
+
+/*Cart text*/
+.cart h3{
+    font-size: 28px;
+    color: #403021;
+}
+
+
+.close-btn {
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+}
+
+.cart-top-bar{
+    display: flex;
+    flex-direction: column;
+    height: 10%;
+    align-items: flex-end;
+}
+.cart-title{
+    width: 100%;
+}
+/*Plan details*/
+.plan-detail-container{
+    height: 20%;
+    width: 100%;
+    background-color: #FFEDC0;
+    border-radius: 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 5%;
+}
+
+
+.item-container{
+    height: 80%;
+    width: 100%;
+    background-color: #FFE39B;
+    border-radius: 18px;
+    padding: 5%;
+}
+
+/*Centers the checkout button*/
+.centerer{
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.check-out-btn{
+    height: 100%;
+    width: 50%;
+    background-color: #34929C;
+    color: white;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 /* Media query for small screens */
 @media screen and (max-width: 768px) {
